--- a/client/stylesheets/app.css
+++ b/client/stylesheets/app.css
@@ -8927,19 +8927,132 @@ th.hide-for-touch {
   }
 }
 /* line 1, ../../../scss/_menu.scss */
-#menu {
-  background: #333333;
-  height: 100vh;
-  box-shadow: 4px 0 3px rgba(51, 51, 51, 0.8);
-  z-index: 999;
+#myGroups {
+  margin-bottom: 1rem;
 }
 
-/* line 7, ../../../scss/_menu.scss */
-nav {
-  margin-top: 1.5rem;
-}
+@media only screen and (min-width: 40.063em) {
+  /* line 7, ../../../scss/_menu.scss */
+  #smallNav {
+    display: none;
+  }
 
-/* line 1, ../../../scss/_custom.scss */
+  /* line 11, ../../../scss/_menu.scss */
+  #largeNav {
+    background: #333333;
+    height: 100vh;
+    box-shadow: 4px 0 3px rgba(51, 51, 51, 0.8);
+    z-index: 999;
+    padding-top: 1.6rem;
+  }
+  /* line 18, ../../../scss/_menu.scss */
+  #largeNav nav {
+    padding-left: 1rem;
+    margin-top: 1.5rem;
+  }
+  /* line 23, ../../../scss/_menu.scss */
+  #largeNav h1 {
+    font-family: 'Ubuntu', sans-serif;
+    color: #008cba;
+    margin-bottom: 1.5rem;
+  }
+  /* line 28, ../../../scss/_menu.scss */
+  #largeNav hr {
+    color: #6D6D6D;
+  }
+  /* line 32, ../../../scss/_menu.scss */
+  #largeNav h4 {
+    font-family: Monospace, sans-serif;
+    color: #8F8F8F;
+    font-size: 1rem;
+  }
+}
+@media only screen and (max-width: 40em) {
+  /* line 42, ../../../scss/_menu.scss */
+  #smallNav {
+    padding-top: 1.6rem;
+    position: absolute;
+    z-index: 999;
+    background: #333333;
+    height: 100vh;
+    width: 100vw;
+    display: none;
+  }
+  /* line 52, ../../../scss/_menu.scss */
+  #smallNav i.fa-times {
+    font-size: 2rem;
+  }
+  /* line 55, ../../../scss/_menu.scss */
+  #smallNav nav {
+    padding-left: 1rem;
+  }
+  /* line 59, ../../../scss/_menu.scss */
+  #smallNav h1 {
+    font-family: 'Ubuntu', sans-serif;
+    color: #008cba;
+    margin-bottom: 1.5rem;
+  }
+  /* line 64, ../../../scss/_menu.scss */
+  #smallNav hr {
+    color: #6D6D6D;
+  }
+  /* line 68, ../../../scss/_menu.scss */
+  #smallNav h4 {
+    font-family: Monospace, sans-serif;
+    color: #8F8F8F;
+    font-size: 1rem;
+  }
+
+  /* line 75, ../../../scss/_menu.scss */
+  #topbar {
+    background: #333333;
+    height: 5rem;
+    padding-left: 0rem;
+    padding-top: 0.5rem;
+    box-shadow: 4px 2px 3px rgba(51, 51, 51, 0.8);
+    z-index: 999;
+    margin: 0;
+  }
+  /* line 83, ../../../scss/_menu.scss */
+  #topbar h2 {
+    padding-top: 0.4rem;
+  }
+  /* line 86, ../../../scss/_menu.scss */
+  #topbar i.fa-bars {
+    font-size: 2rem;
+  }
+  /* line 89, ../../../scss/_menu.scss */
+  #topbar .left {
+    margin-top: 0.5rem;
+    padding: 0.5rem 0.8rem 0.5rem 0.8rem;
+    border-radius: 0.5rem;
+  }
+  /* line 94, ../../../scss/_menu.scss */
+  #topbar a:hover .left {
+    background: #545454;
+  }
+
+  /* line 100, ../../../scss/_menu.scss */
+  .close-button-smallNav {
+    display: visible;
+  }
+  /* line 103, ../../../scss/_menu.scss */
+  .close-button-smallNav a {
+    color: white;
+    display: inline;
+  }
+
+  /* line 109, ../../../scss/_menu.scss */
+  #activetag {
+    padding-top: 0.5rem;
+    height: 2rem;
+  }
+  /* line 112, ../../../scss/_menu.scss */
+  #activetag .left {
+    margin-right: 0.5rem;
+  }
+}
+/* line 1, ../../../scss/_largeScreen.scss */
 html, body {
   margin: 0;
   /* This is used to reset any browser-default margins */
@@ -8949,12 +9062,12 @@ html, body {
   /* As above. */
 }
 
-/* line 6, ../../../scss/_custom.scss */
+/* line 6, ../../../scss/_largeScreen.scss */
 .white {
   color: #FFF;
 }
 
-/* line 9, ../../../scss/_custom.scss */
+/* line 9, ../../../scss/_largeScreen.scss */
 .two-columns {
   -webkit-column-count: 2;
   /* Chrome, Safari, Opera */
@@ -8966,72 +9079,69 @@ html, body {
   column-fill: auto;
 }
 
-/* line 18, ../../../scss/_custom.scss */
+/* line 18, ../../../scss/_largeScreen.scss */
 .tag-active {
   font-size: 1.03125rem;
 }
 
-/* line 22, ../../../scss/_custom.scss */
+@media only screen and (min-width: 40.063em) {
+  /* line 24, ../../../scss/_largeScreen.scss */
+  #activetag:hover .left {
+    margin-right: 0.8rem;
+  }
+
+  /* line 29, ../../../scss/_largeScreen.scss */
+  #activetag {
+    margin-left: 2rem;
+    margin-top: 0.4rem;
+  }
+
+  /* line 34, ../../../scss/_largeScreen.scss */
+  #activetag:hover .close-button-tag {
+    display: block;
+  }
+  /* line 36, ../../../scss/_largeScreen.scss */
+  #activetag:hover .close-button-tag a {
+    color: white;
+    display: block;
+  }
+}
+/* line 46, ../../../scss/_largeScreen.scss */
 li {
   list-style-type: none;
 }
-/* line 25, ../../../scss/_custom.scss */
+/* line 49, ../../../scss/_largeScreen.scss */
 li .user-active {
   font-size: 1rem;
   color: #43ac6a;
   float: left;
   padding-right: 0.2rem;
 }
-/* line 31, ../../../scss/_custom.scss */
+/* line 55, ../../../scss/_largeScreen.scss */
 li .user-offline {
   font-size: 1rem;
   float: left;
   padding-right: 0.2rem;
 }
 
-/* line 38, ../../../scss/_custom.scss */
+/* line 62, ../../../scss/_largeScreen.scss */
 ul {
   margin: 0;
 }
 
-/* line 42, ../../../scss/_custom.scss */
+/* line 66, ../../../scss/_largeScreen.scss */
 #canvas {
   padding: 0;
 }
 
-/* line 45, ../../../scss/_custom.scss */
+/* line 69, ../../../scss/_largeScreen.scss */
 #tab-box {
   background-color: #C8C8C8;
   padding-left: 1rem;
 }
 
-/* line 50, ../../../scss/_custom.scss */
-#menu {
-  padding-top: 1.6rem;
-}
-/* line 53, ../../../scss/_custom.scss */
-#menu nav {
-  padding-left: 1rem;
-}
-/* line 57, ../../../scss/_custom.scss */
-#menu h1 {
-  font-family: 'Ubuntu', sans-serif;
-  color: #008cba;
-  margin-bottom: 1.5rem;
-}
-/* line 62, ../../../scss/_custom.scss */
-#menu hr {
-  color: #6D6D6D;
-}
-/* line 66, ../../../scss/_custom.scss */
-#menu h4 {
-  font-family: Monospace, sans-serif;
-  color: #8F8F8F;
-  font-size: 1rem;
-}
-
-/* line 73, ../../../scss/_custom.scss */
-.close-button, .close-button-tab, .close-button-tag {
+/* line 76, ../../../scss/_largeScreen.scss */
+.close-button, .close-button-tab, .close-button-tag, .close-button-smallnav {
   position: absolute;
   top: 0.3rem;
   right: 0.3rem;
@@ -9041,16 +9151,16 @@ ul {
   z-index: 999;
 }
 
-/* line 91, ../../../scss/_custom.scss */
+/* line 97, ../../../scss/_largeScreen.scss */
 .tabs dd {
   position: relative;
 }
-/* line 95, ../../../scss/_custom.scss */
+/* line 101, ../../../scss/_largeScreen.scss */
 .tabs dd a {
   border-top-right-radius: 0.625rem;
   border-top-left-radius: 0.625rem;
 }
-/* line 100, ../../../scss/_custom.scss */
+/* line 106, ../../../scss/_largeScreen.scss */
 .tabs dd .notification {
   position: absolute;
   color: #008cba;
@@ -9060,32 +9170,25 @@ ul {
   color: tray;
   font-size: 1.3rem;
 }
-/* line 111, ../../../scss/_custom.scss */
-.tabs dd:hover .close-button, .tabs dd:hover .close-button-tab, .tabs dd:hover .close-button-tag {
+/* line 117, ../../../scss/_largeScreen.scss */
+.tabs dd:hover .close-button, .tabs dd:hover .close-button-tab, .tabs dd:hover .close-button-tag, .tabs dd:hover .close-button-smallnav {
   display: block;
 }
-/* line 114, ../../../scss/_custom.scss */
+/* line 120, ../../../scss/_largeScreen.scss */
 .tabs dd:hover .notification {
   display: block;
 }
-/* line 117, ../../../scss/_custom.scss */
+/* line 123, ../../../scss/_largeScreen.scss */
 .tabs dd.active {
   z-index: 100;
   position: relative;
 }
 
-/* line 124, ../../../scss/_custom.scss */
-#middle {
-  height: 90%;
-}
-
-/* line 128, ../../../scss/_custom.scss */
+/* line 133, ../../../scss/_largeScreen.scss */
 #chatbox {
   background-color: #F5F5F5;
-  height: 90vh;
-  padding-left: 0.6rem;
 }
-/* line 134, ../../../scss/_custom.scss */
+/* line 137, ../../../scss/_largeScreen.scss */
 #chatbox #chatbox::before {
   box-shadow: -10px 0 15px -15px inset;
   content: " ";
@@ -9095,7 +9198,7 @@ ul {
   top: 1;
   width: 10px;
 }
-/* line 144, ../../../scss/_custom.scss */
+/* line 147, ../../../scss/_largeScreen.scss */
 #chatbox #chatbox::after {
   box-shadow: 15px 0 15px -15px inset;
   content: " ";
@@ -9105,65 +9208,58 @@ ul {
   right: -15px;
   width: 15px;
 }
-/* line 155, ../../../scss/_custom.scss */
+/* line 158, ../../../scss/_largeScreen.scss */
 #chatbox #chatwindow {
-  padding: 1rem 0.5rem 0 0.5rem;
+  padding: 1rem 0rem 0 0.5rem;
 }
-/* line 159, ../../../scss/_custom.scss */
+/* line 162, ../../../scss/_largeScreen.scss */
 #chatbox header {
   padding-left: 1.5rem;
   padding-top: 1.5rem;
   border-bottom: 0.07rem #B5B9B9 solid;
   box-shadow-bottom: 0rem -0.5rem 0.3rem #383931;
 }
-/* line 165, ../../../scss/_custom.scss */
+/* line 168, ../../../scss/_largeScreen.scss */
 #chatbox header h2 {
   padding: 0;
   margin: 0;
 }
-/* line 170, ../../../scss/_custom.scss */
-#chatbox header #activetag {
-  margin-left: 2rem;
-  margin-top: 0.4rem;
-}
-/* line 174, ../../../scss/_custom.scss */
-#chatbox header #activetag:hover .left {
-  margin-right: 0.8rem;
-}
-/* line 177, ../../../scss/_custom.scss */
-#chatbox header #activetag:hover .close-button-tag {
-  display: block;
-}
-/* line 181, ../../../scss/_custom.scss */
+/* line 175, ../../../scss/_largeScreen.scss */
 #chatbox header a {
   color: white;
   display: block;
 }
 
-/* line 190, ../../../scss/_custom.scss */
+/* line 184, ../../../scss/_largeScreen.scss */
 .msgBox {
-  height: 75vh;
+  height: 77vh;
   position: relative;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
-/* line 200, ../../../scss/_custom.scss */
+/* line 191, ../../../scss/_largeScreen.scss */
+#chatinput {
+  padding: 0;
+  margin: 0;
+}
+
+/* line 196, ../../../scss/_largeScreen.scss */
 #chatinfo {
   background-color: whitesmoke;
   height: 90vh;
   padding: 2rem 4rem 0rem 1rem;
 }
-/* line 205, ../../../scss/_custom.scss */
+/* line 201, ../../../scss/_largeScreen.scss */
 #chatinfo a {
   color: #222222;
 }
-/* line 209, ../../../scss/_custom.scss */
+/* line 205, ../../../scss/_largeScreen.scss */
 #chatinfo .right {
   padding-top: 0.5rem;
 }
 
-/* line 214, ../../../scss/_custom.scss */
+/* line 210, ../../../scss/_largeScreen.scss */
 .fullWidth {
   width: 100vw;
   margin-left: auto;
@@ -9171,7 +9267,7 @@ ul {
   max-width: initial;
 }
 
-/* line 221, ../../../scss/_custom.scss */
+/* line 217, ../../../scss/_largeScreen.scss */
 footer {
   background-color: #3c3e3c;
   height: 10rem;
@@ -9179,6 +9275,17 @@ footer {
   color: white;
 }
 
+@media only screen and (max-width: 40em) {
+  /* line 7, ../../../scss/_smallScreen.scss */
+  #smallSearch {
+    padding: 0;
+  }
+
+  /* line 11, ../../../scss/_smallScreen.scss */
+  .msgBox {
+    height: 74vh;
+  }
+}
 /* line 1, ../../../scss/_header.scss */
 #topheader {
   background-color: #008cba;
